--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -26,3 +26,9 @@
   grid-column-gap: 20px;
   grid-row-gap: 20px;
 }
+
+.resy-form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
